@@ -1,5 +1,9 @@
 dpkg (1.17.25) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Do not leak kvm descriptors in start-stop-daemon on GNU/kFreeBSD systems.
+    Based on a patch by Jeff Epler <jepler@unpythonic.net>. Closes: #779467
+
   [ Updated programs translations ]
   * Dutch (Frans Spiesschaert). Closes: #779953
   * Hungarian (Úr Balázs).
